--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-body{
+
+body {
   overflow-x: hidden;
 }
+
 #root {
   font-family: 'Roboto', 'Segoe UI', sans-serif;
   font-size: 16px;
@@ -34,6 +36,8 @@ body{
 .city-search-input {
   background-color: rgba(255, 255, 255, 0.45);
   margin-bottom: 30px;
+  width: 100%;
+  max-width: 600px;
 }
 
 .city-search-input .btn-search {
