weather detail page design changed

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,10 @@ body {
 
 }
 
+/* .form-control::placeholder{
+  color: rgba(255, 255, 255, 0.65);
+} */
+
 .btn-search .btn {
   color: #fc7e77;
 }
@@ -260,6 +264,6 @@ body {
   text-align: center;
 }
 
-.forecast-slide{
+.forecast-slide {
   background-color: rgba(0, 0, 0, 0.1);
 }
